--- a/apple/JustTetris/JustTetris/BlockItemView.xib
+++ b/apple/JustTetris/JustTetris/BlockItemView.xib
@@ -6,18 +6,34 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner"/>
+        <customObject id="-2" userLabel="File's Owner">
+            <connections>
+                <outlet property="view" destination="c22-O7-iKe" id="AxN-Gg-v3a"/>
+            </connections>
+        </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView id="c22-O7-iKe">
+        <customView id="c22-O7-iKe" customClass="BoxView" customModule="JustTetris" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="304" height="288"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+            <subviews>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TnS-6W-7xg">
+                    <rect key="frame" x="6" y="265" width="37" height="17"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Label" id="e2y-gl-CN1">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+            </subviews>
             <point key="canvasLocation" x="51" y="177"/>
         </customView>
         <collectionViewItem id="byJ-lg-D3X" customClass="BlockItemView" customModule="JustTetris" customModuleProvider="target">
             <connections>
                 <outlet property="sourceItemView" destination="c22-O7-iKe" id="BpM-fT-FMT"/>
-                <outlet property="view" destination="c22-O7-iKe" id="zu7-bu-hN0"/>
+                <outlet property="textField" destination="TnS-6W-7xg" id="IAj-pf-zu1"/>
+                <outlet property="view" destination="c22-O7-iKe" id="Ncx-sX-n2D"/>
             </connections>
         </collectionViewItem>
     </objects>
