--- a/apple/JustTetris/JustTetris/Window.xib
+++ b/apple/JustTetris/JustTetris/Window.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="13529" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="13771" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13771"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -12,14 +12,20 @@
         <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="196" y="240" width="494" height="496"/>
+            <rect key="contentRect" x="196" y="240" width="398" height="581"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1440" height="877"/>
             <view key="contentView" wantsLayer="YES" id="EiT-Mj-1SZ">
-                <rect key="frame" x="0.0" y="0.0" width="494" height="496"/>
+                <rect key="frame" x="0.0" y="0.0" width="398" height="581"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <customView translatesAutoresizingMaskIntoConstraints="NO" id="S3j-WO-UnU" customClass="GridView" customModule="JustTetris" customModuleProvider="target">
+                        <rect key="frame" x="20" y="61" width="250" height="500"/>
+                    </customView>
+                    <customView translatesAutoresizingMaskIntoConstraints="NO" id="Oas-eg-vlD" customClass="GridView" customModule="JustTetris" customModuleProvider="target">
+                        <rect key="frame" x="278" y="461" width="100" height="100"/>
+                    </customView>
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="6Qe-8b-zIh">
-                        <rect key="frame" x="192" y="13" width="110" height="32"/>
+                        <rect key="frame" x="144" y="13" width="110" height="32"/>
                         <buttonCell key="cell" type="push" title="Break Point" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="FZj-eE-gy9">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -28,23 +34,26 @@
                             <action selector="breakPoint:" target="8z0-cz-Cb3" id="MQI-Xe-0Gu"/>
                         </connections>
                     </button>
-                    <customView translatesAutoresizingMaskIntoConstraints="NO" id="Oas-eg-vlD" customClass="ShapeView" customModule="JustTetris" customModuleProvider="target">
-                        <rect key="frame" x="20" y="61" width="454" height="415"/>
-                    </customView>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="Oas-eg-vlD" firstAttribute="leading" secondItem="S3j-WO-UnU" secondAttribute="trailing" constant="8" id="15b-Ac-2PP"/>
+                    <constraint firstItem="Oas-eg-vlD" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="20" id="7j6-wg-dr6"/>
+                    <constraint firstAttribute="bottom" secondItem="Oas-eg-vlD" secondAttribute="bottom" constant="461" id="9sF-2Q-AQn"/>
+                    <constraint firstAttribute="trailing" secondItem="S3j-WO-UnU" secondAttribute="trailing" constant="128" id="EWU-9S-tIX"/>
                     <constraint firstItem="6Qe-8b-zIh" firstAttribute="centerX" secondItem="EiT-Mj-1SZ" secondAttribute="centerX" id="FiI-q4-Cd3"/>
-                    <constraint firstItem="6Qe-8b-zIh" firstAttribute="top" secondItem="Oas-eg-vlD" secondAttribute="bottom" constant="20" id="H5o-De-LCY"/>
-                    <constraint firstItem="Oas-eg-vlD" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="20" id="SJD-AK-i5Z"/>
-                    <constraint firstItem="Oas-eg-vlD" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="20" id="ebk-uj-Fkg"/>
-                    <constraint firstAttribute="trailing" secondItem="Oas-eg-vlD" secondAttribute="trailing" constant="20" id="o4W-Dp-aQ0"/>
+                    <constraint firstAttribute="trailing" secondItem="Oas-eg-vlD" secondAttribute="trailing" constant="20" id="Rq5-X6-5Y5"/>
+                    <constraint firstItem="6Qe-8b-zIh" firstAttribute="centerX" secondItem="EiT-Mj-1SZ" secondAttribute="centerX" id="Sfy-CN-ktT"/>
+                    <constraint firstItem="S3j-WO-UnU" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="20" id="dGK-hi-deG"/>
+                    <constraint firstItem="S3j-WO-UnU" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="20" id="dXD-By-CfG"/>
+                    <constraint firstAttribute="bottom" secondItem="S3j-WO-UnU" secondAttribute="bottom" constant="61" id="wmn-0T-m9y"/>
                     <constraint firstAttribute="bottom" secondItem="6Qe-8b-zIh" secondAttribute="bottom" constant="20" symbolic="YES" id="x28-2Y-kNh"/>
                 </constraints>
             </view>
-            <point key="canvasLocation" x="34" y="260"/>
+            <point key="canvasLocation" x="-14" y="302.5"/>
         </window>
         <viewController id="8z0-cz-Cb3" customClass="ViewController" customModule="JustTetris" customModuleProvider="target">
             <connections>
+                <outlet property="boardView" destination="S3j-WO-UnU" id="mGT-Lv-73q"/>
                 <outlet property="shapeView" destination="Oas-eg-vlD" id="bmH-PS-uqK"/>
                 <outlet property="view" destination="EiT-Mj-1SZ" id="eto-Ij-DQj"/>
             </connections>
