--- a/apple/JustTetris/JustTetris/Window.xib
+++ b/apple/JustTetris/JustTetris/Window.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13771"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -20,33 +21,46 @@
                 <subviews>
                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="S3j-WO-UnU" customClass="GridView" customModule="JustTetris" customModuleProvider="target">
                         <rect key="frame" x="20" y="61" width="250" height="500"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="S3j-WO-UnU" secondAttribute="height" multiplier="1:2" id="nCR-h8-A15"/>
+                        </constraints>
                     </customView>
                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="Oas-eg-vlD" customClass="GridView" customModule="JustTetris" customModuleProvider="target">
                         <rect key="frame" x="278" y="461" width="100" height="100"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="Oas-eg-vlD" secondAttribute="height" multiplier="1:1" id="cDX-mz-Iys"/>
+                        </constraints>
                     </customView>
-                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="6Qe-8b-zIh">
-                        <rect key="frame" x="144" y="13" width="110" height="32"/>
-                        <buttonCell key="cell" type="push" title="Break Point" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="FZj-eE-gy9">
+                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ws7-tB-9wC">
+                        <rect key="frame" x="17" y="13" width="75" height="32"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <buttonCell key="cell" type="push" title="Reset" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="f5a-4l-NKw">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
                         </buttonCell>
                         <connections>
-                            <action selector="breakPoint:" target="8z0-cz-Cb3" id="TWh-s8-rB2"/>
+                            <action selector="resetGame:" target="8z0-cz-Cb3" id="fSa-aW-sAw"/>
+                        </connections>
+                    </button>
+                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nD7-Xf-6E5">
+                        <rect key="frame" x="266" y="13" width="127" height="32"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <buttonCell key="cell" type="push" title="{ Break Point }" bezelStyle="rounded" alignment="center" state="on" borderStyle="border" inset="2" id="AwF-RK-Cc3">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="breakPoint:" target="8z0-cz-Cb3" id="RrX-Y2-mKA"/>
                         </connections>
                     </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="Oas-eg-vlD" firstAttribute="leading" secondItem="S3j-WO-UnU" secondAttribute="trailing" constant="8" id="15b-Ac-2PP"/>
                     <constraint firstItem="Oas-eg-vlD" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="20" id="7j6-wg-dr6"/>
-                    <constraint firstAttribute="bottom" secondItem="Oas-eg-vlD" secondAttribute="bottom" constant="461" id="9sF-2Q-AQn"/>
-                    <constraint firstAttribute="trailing" secondItem="S3j-WO-UnU" secondAttribute="trailing" constant="128" id="EWU-9S-tIX"/>
-                    <constraint firstItem="6Qe-8b-zIh" firstAttribute="centerX" secondItem="EiT-Mj-1SZ" secondAttribute="centerX" id="FiI-q4-Cd3"/>
-                    <constraint firstAttribute="trailing" secondItem="Oas-eg-vlD" secondAttribute="trailing" constant="20" id="Rq5-X6-5Y5"/>
-                    <constraint firstItem="6Qe-8b-zIh" firstAttribute="centerX" secondItem="EiT-Mj-1SZ" secondAttribute="centerX" id="Sfy-CN-ktT"/>
                     <constraint firstItem="S3j-WO-UnU" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="20" id="dGK-hi-deG"/>
                     <constraint firstItem="S3j-WO-UnU" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="20" id="dXD-By-CfG"/>
+                    <constraint firstAttribute="trailing" secondItem="Oas-eg-vlD" secondAttribute="trailing" constant="20" id="hy3-7O-qik"/>
                     <constraint firstAttribute="bottom" secondItem="S3j-WO-UnU" secondAttribute="bottom" constant="61" id="wmn-0T-m9y"/>
-                    <constraint firstAttribute="bottom" secondItem="6Qe-8b-zIh" secondAttribute="bottom" constant="20" symbolic="YES" id="x28-2Y-kNh"/>
                 </constraints>
             </view>
             <connections>
