--- a/apple/JustTetris/JustTetris/Window.xib
+++ b/apple/JustTetris/JustTetris/Window.xib
@@ -42,13 +42,13 @@
                         </connections>
                     </button>
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Ws7-tB-9wC">
-                        <rect key="frame" x="14" y="13" width="118" height="32"/>
-                        <buttonCell key="cell" type="push" title="Empty Board" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="f5a-4l-NKw">
+                        <rect key="frame" x="14" y="13" width="106" height="32"/>
+                        <buttonCell key="cell" type="push" title="New Game" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="f5a-4l-NKw">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
                         </buttonCell>
                         <connections>
-                            <action selector="emptyBoard:" target="8z0-cz-Cb3" id="rAC-Gy-cgB"/>
+                            <action selector="newGame:" target="8z0-cz-Cb3" id="7Ep-Cm-bth"/>
                         </connections>
                     </button>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="v5q-gi-GmW">
